--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "server.js",
   "scripts": {},
   "dependencies": {
+    "browserify-transform-adapter": "0.0.1",
+    "envify": "^3.2.0",
     "express": "^3.18.3",
     "handlebars": "^2.0.0",
     "node-jsx": "^0.12.0",
